--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -13,4 +13,6 @@ zuul.routes.order-service.service-id=order-service
 zuul.routes.auth-service.strip-prefix=false
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
 zuul.routes.auth-admin.path=/admin/**
+
 zuul.routes.auth-admin.service-id=auth-service
+zuul.routes.order-admin.service-id=order-service
