Add order-service auth path

--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -16,5 +16,5 @@ zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
 zuul.routes.auth-admin.path=/admin/**
 zuul.routes.auth-admin.service-id=auth-service
 
-zuul.routes.order-admin.path=/admin/**
+zuul.routes.order-admin.path=/order/**
 zuul.routes.order-admin.service-id=order-service
