--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -6,15 +6,14 @@ zuul.ignored-services=*
 
 zuul.routes.auth-service.path=/auth/**
 zuul.routes.auth-service.service-id=auth-service
-
-zuul.routes.order-service.path=/order/**
-zuul.routes.order-service.service-id=order-service
-
 zuul.routes.auth-service.strip-prefix=false
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
-
 zuul.routes.auth-admin.path=/admin/**
 zuul.routes.auth-admin.service-id=auth-service
 
+zuul.routes.order-service.path=/order/**
+zuul.routes.order-service.service-id=order-service
+zuul.routes.order-service.strip-prefix=false
+zuul.routes.order-service.sensitive-headers=Cookie,Set-Cookie
 zuul.routes.order-admin.path=/order-admin/**
 zuul.routes.order-admin.service-id=order-service
