--- a/order-service.properties
+++ b/order-service.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/my_db
-spring.datasource.username=my_db
-spring.datasource.password=my_db
+spring.datasource.username=root
+spring.datasource.password=1q2w3e4r
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=create
